# crashtrace

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
demo/: CMakeLists.txt  debug_direct_demo.cpp  release_collector_demo.cpp
docs/: api.md  workflow.md
lib/: CMakeLists.txt
lib/include/crashtrace/: crashtrace.hpp
lib/src/: crashtrace.cpp
scripts/: build_release_symbols.sh  env.sh  local_env.sh.example  run_debug_direct.sh  run_release_collect.sh  symbolize_release_log.sh
src/: main.cpp
tools/: CMakeLists.txt  release_symbolizer.cpp
